Addresses Issue #68: Fixes calculation of the member buttons overflow

--- a/arsnova.click/client/css/memberlist.scss
+++ b/arsnova.click/client/css/memberlist.scss
@@ -83,10 +83,6 @@
     }
 }
 
-.learner-list {
-    margin-bottom: 15px;
-}
-
 .button-row {
     margin-top: 20px;
 }
